--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "numterse",
   "version": "1.0.0",
-  "description": "make numbers terse",
+  "description": "number formatter",
   "main": "index.js",
   "directories": {
     "test": "tests"
